# rau-studio

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml
crates/aifficator-core/: Cargo.toml
crates/aifficator-core/examples/: report.rs
crates/aifficator-core/src/: conversion.rs  exporter.rs  lib.rs  planner.rs  rekordbox.rs  validation.rs
crates/aifficator-core/tests/: rekordbox_import.rs
docs/: architecture.md  enrichment.md  file-importer.md  macos-signing.md  mastering.md  p2p-sharing.md  radio-broadcast.md  rekordbox-convert.md  smart-playlists.md  turn.md
docs/rekordbox-import/: README.md
scripts/: prepare-ffmpeg-sidecars.sh
src/: App.svelte  App.tsx  BroadcastPage.tsx  CatalogPage.tsx  EnrichmentPage.tsx  FileConversionPage.tsx  HomePage.tsx  MasteringPage.tsx  P2PPage.tsx  PlaylistBrowserPage.tsx  PlaylistCopilotPage.tsx  PlaylistIndexPage.tsx  TaxonomyPage.tsx  enrichmentProviders.ts  i18n.tsx  main.ts  main.tsx  playback.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: broadcast.rs  lib.rs  local_conversion.rs  main.rs  mastering.rs  p2p.rs  playlist_copilot.rs  playlist_index.rs  settings.rs  system.rs
src-tauri/src/enrichment/: domain.rs  mod.rs  planner.rs  registry.rs  resolver.rs
src-tauri/src/enrichment/providers/: lastfm.rs  mod.rs  musicbrainz.rs
src-tauri/src/p2p/: network.rs  stream.rs
src/components/: AppErrorBoundary.tsx  terminal-drawer.tsx
src/components/audio/: GlobalAudioPlayer.tsx
src/components/tracks/: PlaylistAddDialog.tsx  TrackCover.tsx  TrackDetailSheet.tsx  TrackList.tsx  types.ts  useTrackPlayer.tsx
src/pages/: StreamBroadcaster.tsx  StreamListener.tsx
