[package]
name = "aifficator"
version = "0.1.0"
description = "Convert Rekordbox playlist exports to AIFF-compatible exports"
authors = ["Aifficator"]
edition = "2021"

[lib]
name = "aifficator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aifficator-core = { path = "../crates/aifficator-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

