[package]
name = "rau-studio"
version = "0.1.10"
description = "Local audio toolkit for DJs and producers"
authors = ["Rauversion"]
edition = "2021"

[lib]
name = "aifficator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aifficator-core = { path = "../crates/aifficator-core" }
chrono = { version = "0.4.45", features = ["serde"] }
base64 = "0.22.1"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
ring = "0.17.14"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
