[package]
name = "rau-studio"
version = "0.1.24"
description = "Local audio toolkit for DJs and producers"
authors = ["Rauversion"]
edition = "2021"

[lib]
name = "aifficator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aifficator-core = { path = "../crates/aifficator-core" }
argon2 = "0.5.3"
chrono = { version = "0.4.45", features = ["serde"] }
cpal = "0.18.1"
base64 = "0.22.1"
iroh = "1.0.2"
iroh-tickets = "1.0.0"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "query", "rustls"] }
ring = "0.17.14"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
walkdir = "2.5.0"
zeroize = "1.8.2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "=1.5.4", features = ["macos_13_0"] }
